--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,8 @@
     top: 95px;
 
 }
-.nav{
+
+.nav {
     color: rgb(255, 255, 255);
 }
 
@@ -29,10 +30,12 @@
     display: flex;
     gap: 227px;
 }
-.page{
+
+.page {
     margin-top: 36px;
     margin-left: 40px;
 }
+
 .for {
     width: 1300px;
     height: 387px;
@@ -235,49 +238,91 @@
     letter-spacing: 3.2px;
     text-align: left;
 }
-.sed{
+
+.sed {
     color: rgb(255, 255, 255);
-font-family: DM Sans;
-font-size: 36px;
-font-weight: 400;
-line-height: 43.2px;
-letter-spacing: 0%;
-text-align: left;
-margin-top: 28px;
+    font-family: DM Sans;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 43.2px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 28px;
 }
 
-.gen{
+.gen {
     color: rgba(255, 255, 255, 0.7);
-font-family: DM Sans;
-font-size: 24px;
-font-weight: 400;
-line-height: 28.8px;
-letter-spacing: 0%;
-text-align: left;
+    font-family: DM Sans;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28.8px;
+    letter-spacing: 0%;
+    text-align: left;
 }
-.cover{
+
+.cover {
+    margin-top: 200px;
+    margin-left: 30px;
+}
+
+.weder {
+    display: flex;
+    gap: 2px;
+    width: 447.14px;
+    height: 32px;
+}
+
+.sade {
+    color: rgba(255, 255, 255, 0.7);
+    font-family: DM Sans;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+
+.frame {
+    padding: 100px 50px;
+    display: flex;
+
+}
+
+.footer {
     margin-top: 200px;
 }
-.fit{
-   display: flex;
-   gap: 20px; margin-top: 0px;
-}
-.fet{
-    width: 423px;
-height: 321px;
-border-radius: 32px;
 
-background: rgb(0, 0, 0);
+.text {
+    font-size: 32px;
+    color: rgb(255, 255, 255);
 }
+
+.fit {
+    display: flex;
+    gap: 20px;
+    margin-top: 0px;
+}
+
+.fet {
+    width: 423px;
+    height: 321px;
+    border-radius: 32px;
+
+    background: rgb(0, 0, 0);
+}
+
 .take {
     display: flex;
     gap: 60px;
 }
-.lok{
+
+.lok {
     position: relative;
     top: -30px;
     right: 50px;
 }
+
 .min:hover {
     color: rgb(17, 141, 168);
 }
